# biophilia

./: .env.example  .gitignore  CHANGELOG.md  CI_CD.md  CI_CD_SETUP.md  CONTRIBUTING.md  Claude-Constitution.md  DEVELOPMENT.md  EVOLUTION_OF_THE_PROJECT.md  GLOSSARY.md  IMPLEMENTATION.md  INSTALLATION.md  LICENSE  MANIFEST.md  NAVIGATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SIGNATURE.md  TEST_CASES.md  VISION.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: security.yml  tests.yml
biophilia-biosemiotics/: MANIFEST.md  README.md  analyze_integrity.py
biophilia-biosemiotics/framework/: semiotic_bridge.md  three_zones_model.md
biophilia-biosemiotics/governance/: governance_layer.py  homeostasis_controller.py  synergy_logic.py
biophilia-biosemiotics/implementation/: IMPLEMENTATION.md  MASTER-SYSTEM-PROMPT.md  PROTOTYPE_MAPPING.md
biophilia-biosemiotics/logs/: biophilic_integrity_history.json
biophilia-biosemiotics/orchestration/: biophilic_baseline.json  dashboard.py  main.py
biophilia-biosemiotics/theory/: BIOSEMIOTICS.md  MIRROR_HYPOTHESIS.md
core/: ANALYSIS-BIF-vs-Claude.md  PRINCIPLES.md  bif-bundle_2026-05-05.md  binding.md  dante-element.md  pillar-I.md  pillar-II.md  pillar-III.md
process/analysis/: EXP_01_DIGITAL_HOMEOSTASIS.md  EXP_02_SYSTEMIC_DISSONANCE_GEOPOLITICAL_IDENTITY.md
process/benchmarks/: README.md
process/dialogue/: Copilot-Claude.md  Gemini-bif-Stresstest-Ukraine_2026-05-06.md  Gemini-bif-stresstest_2026-05-05.md  Gemini-bif-test_2026-05-04.md  Gemma4-31b_Biosemiotic.md  gemma4-31b.md  (+16 more)
prompts/: README.md  bif-claude4-CAI-de.md  bif-gemini-de.md  bif-gemma4-4-CAI-en.md  bif-gemma4-CAI-de.md  bif-gemma4-de.md  bif-ki-stresstest-de.md  gpt-bif-de.md
scripts/: analyze_integrity.py  run_simulation.py
tests/: conftest.py  test_chronicle.py  test_cloud_governor.py  test_entropy_detector.py  test_governance.py  test_homeostasis.py  test_interpreter.py  test_synergy.py
(+47 files in other folders)
