[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "biophilia-framework"
version = "0.2.0"
description = "Biophilic AI Framework – Life-Affirming Intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "ethics", "biosemiotics", "biophilia", "homeostasis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Zero mandatory runtime dependencies – pure stdlib.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.5",
]
dotenv = ["python-dotenv>=1.0"]

[project.scripts]
biophilia-run = "biophilia.orchestration.application:main"

[tool.hatch.build.targets.wheel]
packages = ["src/biophilia"]

# ── Testing ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["src/biophilia"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

# ── Linting (Ruff) ────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # line length is enforced by formatter, not linter

[tool.ruff.format]
quote-style = "double"

# ── Type Checking (mypy) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true

